
*** Clearer documentation for non-Cocoa builds

Updated option descriptions to clarify that =--with-x11= and =--without-cocoa= produce terminal/X11 builds without =Emacs.app=.

*** Library not loaded errors

Added caveat explaining how to fix "Library not loaded" errors after upgrading dependencies like =tree-sitter= or =libgccjit=: simply run =brew reinstall emacs-plus@XX=.

* 2025-12-26

** Community Patches

*** Window blurring and alpha transparency

New community patch adds support for window blurring and configurable alpha transparency effects.

*** Async process read performance

New community patch improves async process read performance.

* 2025-12-14

** New Features

*** Community patches and icons system

Introduced a new system for community-contributed patches and icons via =~/.config/emacs-plus/build.yml=. This allows users to easily apply patches and icons from a community registry or external URLs.

The =--with-*-icon= options are now deprecated (removal date: 2026-03-14). Please migrate to =build.yml=.

See [[./community/README.md][Community Documentation]] for details.

* 2025-11-24

** New Features

*** Emacs Client.app

Starting with =emacs-plus@30= and =emacs-plus@31=, the formula now includes =Emacs Client.app= - a companion application for opening files in Emacs from Finder, Spotlight, and other macOS applications. It connects to an existing Emacs daemon using =emacsclient=.

*** macOS 26 (Tahoe) compatibility

Fixed =Emacs Client.app= icon display on macOS 26+ by removing =Assets.car=.

* 2025-10-17

** New Features

*** PATH injection for macOS Sequoia

Fixed PATH injection on macOS 15 (Sequoia) which was ignoring =LSEnvironment= in =Info.plist=. The fix uses a wrapper script to inject PATH from your shell.

To disable PATH injection:
#+begin_src bash
export EMACS_PLUS_NO_PATH_INJECTION=1
#+end_src

* 2025-08-15

** Releases

*** Emacs 30.2

Updated =emacs-plus@30= to Emacs 30.2.

* 2025-02-23

** Releases

*** Emacs 30.1
